crates/lang/macro/tests/ui/fail/M-10-method-unknown-ink-marker.stderr
error: unknown ink! attribute (path)
  --> $DIR/M-10-method-unknown-ink-marker.rs:17:15
   |
17 |         #[ink(unknown_marker)]
   |               ^^^^^^^^^^^^^^
